refactor: testes CandidatoRepository com asserts mais completos